chore: format & simplify styles + dark theme

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>Number Naming</title>
-	<meta charset="UTF-8" content="text/html">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Type a number and check it's many names...">
-	<meta name="keywords" content="Git GitHub Number System Systems Scale Short Long Conway zettca">
-</head>
+  <head>
+    <title>Number Naming</title>
+    <meta charset="UTF-8" content="text/html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Type a number and check its many names..." />
+    <meta name="keywords" content="Git GitHub Number System Systems Scale Short Long Conway zettca" />
 
-<body>
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
-<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" />
+    <link rel="stylesheet" href="styles.css" />
+    <script defer src="scripts.js"></script>
+  </head>
 
-<section>
-	<h1>Number Scales</h1>
-	<input id="number" type="number" placeholder="2147483647"></input>
-	<div id="names"></div>
-</section>
-
-<script src="scripts.js"></script>
+  <body>
+    <main>
+      <h1>Number Scales</h1>
+      <input id="number" type="number" placeholder="2147483647" />
+      <div id="names"></div>
+    </main>
+  </body>
+</html>
